# ciphervault_project

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  vaults.db
.github/workflows/: ci.yml
ciphervault/: cli.py  models.py  utils.py  vault_handler.py
tests/: test_cli_integration.py  test_vault_basic.py  test_vault_errors.py
web/: api.py  database.py  main.py
web/static/: index.html  landing.html
web/static/css/: styles.css
web/static/js/: app.js
